--- a/app/renderer/css/app.scss
+++ b/app/renderer/css/app.scss
@@ -1,5 +1,7 @@
 $fa-font-path: "../../../../node_modules/font-awesome/fonts";
 
 @import 'font-awesome/scss/font-awesome';
+@import 'codemirror/lib/codemirror';
+@import 'codemirror/theme/monokai';
 @import './functions/*';
 @import './components/*';
