--- a/app/renderer/css/app.scss
+++ b/app/renderer/css/app.scss
@@ -3,5 +3,7 @@ $fa-font-path: "../../../../node_modules/font-awesome/fonts";
 @import 'font-awesome/scss/font-awesome';
 @import 'codemirror/lib/codemirror';
 @import 'codemirror/theme/monokai';
+@import './foundations/*';
 @import './functions/*';
+@import './layouts/*';
 @import './components/*';
