Add global menu

--- a/app/renderer/css/layouts/app.scss
+++ b/app/renderer/css/layouts/app.scss
@@ -2,10 +2,10 @@
   display: flex;
 }
 
-.layout-app-column1 {
-  width: 300px;
+.layout-app-menu {
+  width: 50px;
 }
 
-.layout-app-column2 {
+.layout-app-main {
   width: 100%;
 }
