--- a/app/renderer/css/components/_codemirror.scss
+++ b/app/renderer/css/components/_codemirror.scss
@@ -1,4 +1,6 @@
 .CodeMirror {
-  font-size: 16px;
+  font-size: 13px;
   font-family: monaco, monospace;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
 }
