--- a/app/renderer/css/components/_button.scss
+++ b/app/renderer/css/components/_button.scss
@@ -1,8 +1,8 @@
 .Button {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 3px 12px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.42857143;
   text-align: center;
@@ -15,6 +15,6 @@
   border: 1px solid transparent;
   border-radius: 4px;
   color: #333;
-  background-color: #EFEFEF;
+  background-color: #FFF;
   border-color: #CCC;
 }
