--- a/app/renderer/css/components/_query_title.scss
+++ b/app/renderer/css/components/_query_title.scss
@@ -1,6 +1,17 @@
-.QueryTitle {
+.QueryTitle h1 {
   font-weight: bold;
   font-size: 24px;
   margin: 0;
   padding: 10px;
+}
+
+.QueryTitle input {
+  font-weight: bold;
+  font-size: 24px;
+  margin: 0;
+  padding: 10px;
+  outline: none;
+  border: none;
+  font-family: inherit;
+  width: 100%;
 }
