--- a/app/renderer/css/components/_query_list.scss
+++ b/app/renderer/css/components/_query_list.scss
@@ -1,4 +1,7 @@
 .QueryList {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .QueryList-new {
@@ -15,6 +18,8 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  flex: 1 1 auto;
+  overflow-y: auto;
 }
 
 .QueryList > ul > li {
