--- a/app/renderer/css/components/_query_panel.scss
+++ b/app/renderer/css/components/_query_panel.scss
@@ -10,4 +10,12 @@
 
 .QueryPanel-main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .QueryResult {
+    flex: 1 1 auto;
+    overflow: auto;
+  }
 }
