Improve query result

--- a/app/renderer/css/components/_query_result.scss
+++ b/app/renderer/css/components/_query_result.scss
@@ -64,3 +64,11 @@
 .ChartPreview {
   flex: 1;
 }
+
+.QueryResult-errorMessage {
+  padding: 10px;
+  font-size: 14px;
+  color: #333;
+  font-family: monaco, monospace;
+  line-height: 1.6;
+}
