--- a/app/renderer/css/components/_sql_editor.scss
+++ b/app/renderer/css/components/_sql_editor.scss
@@ -29,6 +29,11 @@
   font-size: 14px;
 }
 
+.SQLEditor-status .fa-working {
+  color: #999;
+  font-size: 14px;
+}
+
 .SQLEditor-status.is-error span {
   color: #bb0c0c;
 }
