--- a/app/renderer/css/components/_query_panel_header.scss
+++ b/app/renderer/css/components/_query_panel_header.scss
@@ -2,19 +2,9 @@
   position: relative;
 }
 
-.QueryPanelHeader .QueryTitle {
-}
-
 .QueryPanelHeader .ConnectionSelect {
   position: absolute;
-  right: 35px;
-  top: 10px;
-}
-
-.QueryPanelHeader-delete {
-  position: absolute;
   right: 10px;
-  top: 10px;
-  color: #999;
-  cursor: pointer;
+  top: 6px;
+  width: 240px;
 }
