Rename connection to data source

--- a/app/renderer/css/components/_data_source_panel.scss
+++ b/app/renderer/css/components/_data_source_panel.scss
@@ -1,18 +1,18 @@
-.ConnectionPanel {
+.DataSourcePanel {
   display: flex;
 }
 
-.ConnectionPanel-connectionList {
+.DataSourcePanel-dataSourceList {
   width: 280px;
   border-right: 1px solid #CCC;
   min-height: 100vh;
 }
 
-.ConnectionPanel-tableList {
+.DataSourcePanel-tableList {
   width: 260px;
 }
 
-.ConnectionPanel-tableSummary {
+.DataSourcePanel-tableSummary {
   flex: 1;
   height: 100vh;
   width: 0;
