--- a/app/renderer/css/components/_query_panel_header.scss
+++ b/app/renderer/css/components/_query_panel_header.scss
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.QueryPanelHeader .ConnectionSelect {
+.QueryPanelHeader .DataSourceSelect {
   position: absolute;
   right: 10px;
   top: 6px;
