--- a/app/renderer/css/components/_data_source_list.scss
+++ b/app/renderer/css/components/_data_source_list.scss
@@ -1,10 +1,10 @@
-.ConnectionList {
+.DataSourceList {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
-.ConnectionList-new {
+.DataSourceList-new {
   padding: 10px;
   font-size: 20px;
   border-bottom: 1px solid #CCC;
@@ -14,7 +14,7 @@
   }
 }
 
-.ConnectionList > ul {
+.DataSourceList > ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -22,7 +22,7 @@
   overflow-y: auto;
 }
 
-.ConnectionList > ul > li {
+.DataSourceList > ul > li {
   margin: 0;
   padding: 15px 10px;
   border-bottom: 1px solid #CCC;
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 
-.ConnectionList > ul > li.is-selected {
+.DataSourceList > ul > li.is-selected {
   background-color: #2673E8;
   color: #FFF;
 }
