--- a/app/renderer/css/components/_table_list.scss
+++ b/app/renderer/css/components/_table_list.scss
@@ -5,9 +5,35 @@
   border-right: 1px solid #CCC;
 }
 
+.TableList-filter {
+  padding: 10px 5px;
+  position: relative;
+
+  &:before {
+    content: "\f002";
+    font-family: "FontAwesome";
+    display: inline-block;
+    position: absolute;
+    left: 14px;
+    top: 16px;
+    color: #999;
+    font-size: 12px;
+  }
+}
+
+.TableList-filter input[type="search"] {
+  border-radius: 15px;
+  width: 100%;
+  padding: 3px 15px 3px 26px;
+  border: 1px solid #d0d0d0;
+  font-size: 12px;
+  color: #666;
+  outline: none;
+}
+
 .TableList > ul {
   list-style: none;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
   margin: 0;
 }
 
