--- a/app/renderer/css/components/_query_result.scss
+++ b/app/renderer/css/components/_query_result.scss
@@ -3,6 +3,7 @@
   color: #666;
   padding: 0 5px;
   border-bottom: 1px solid #ccc;
+  position: relative;
 
   > span {
     display: inline-block;
@@ -25,6 +26,49 @@
       bottom: -5px;
       left: -2px;
       border-radius: 3px 3px 0 0;
+    }
+  }
+
+  .QueryResult-share {
+    position: absolute;
+    right: 20px;
+    top: 6px;
+  }
+
+  .QueryResult-shareBtn {
+    display: inline-block;
+    padding: 6px;
+    border-radius: 3px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: darken(#F7F7F7, 5%);
+    }
+  }
+
+  .QueryResult-shareFlyout {
+    position: absolute;
+    top: 28px;
+    width: 180px;
+    right: 0;
+    border: 1px solid #CCC;
+    background-color: #FFF;
+    border-radius: 4px;
+  }
+
+  .QueryResult-shareFlyout ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  .QueryResult-shareFlyout li {
+    padding: 5px 8px;
+    color: #666;
+    font-size: 14px;
+    cursor: pointer;
+    &:hover {
+      background-color: #EFEFEF;
     }
   }
 }
