--- a/app/renderer/css/components/_query_result.scss
+++ b/app/renderer/css/components/_query_result.scss
@@ -54,6 +54,7 @@
     border: 1px solid #CCC;
     background-color: #FFF;
     border-radius: 4px;
+    z-index: 1;
   }
 
   .QueryResult-shareFlyout ul {
