--- a/app/renderer/css/components/_setting_panel.scss
+++ b/app/renderer/css/components/_setting_panel.scss
@@ -13,3 +13,30 @@
 .SettingPanel-keyBind .Select {
   width: 100px;
 }
+
+.SettingPanel input[type="text"] {
+  width: 300px;
+  padding: 5px;
+  outline: none;
+}
+
+.SettingPanel-github details {
+  margin: 10px 0 10px 15px;
+}
+
+.SettingPanel-github details summary {
+  font-size: 13px;
+  color: #666;
+  outline: none;
+  margin-left: -15px;
+}
+
+.SettingPanel-githubTokenOk {
+  margin-left: 5px;
+  color: #59bb0c;
+}
+
+.SettingPanel-githubTokenError {
+  margin-left: 5px;
+  color: #bb0c0c;
+}
