Improve resizing editor

--- a/app/renderer/css/components/_sql_editor.scss
+++ b/app/renderer/css/components/_sql_editor.scss
@@ -43,9 +43,10 @@
 
 .SQLEditor-resize {
   position: absolute;
-  right: 18px;
-  top: 14px;
+  right: 8px;
+  top: 5px;
   display: inline-block;
   color: #999;
   cursor: row-resize;
+  padding: 10px 20px;
 }
