--- a/app/renderer/styles/components/data_source_list.css
+++ b/app/renderer/styles/components/data_source_list.css
@@ -1,20 +1,20 @@
-.QueryList {
+.DataSourceList {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
-.QueryList-new {
+.DataSourceList-new {
   padding: 10px;
   font-size: 20px;
   border-bottom: 1px solid #CCC;
-
-  i {
-    cursor: pointer;
-  }
 }
 
-.QueryList > ul {
+.DataSourceList-new i {
+  cursor: pointer;
+}
+
+.DataSourceList > ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -22,7 +22,7 @@
   overflow-y: auto;
 }
 
-.QueryList > ul > li {
+.DataSourceList > ul > li {
   margin: 0;
   padding: 15px 10px;
   border-bottom: 1px solid #CCC;
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 
-.QueryList > ul > li.is-selected {
+.DataSourceList > ul > li.is-selected {
   background-color: #2673E8;
   color: #FFF;
 }
