--- a/app/renderer/styles/components/query_list.css
+++ b/app/renderer/styles/components/query_list.css
@@ -1,20 +1,21 @@
-.DataSourceList {
+.QueryList {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
 
-.DataSourceList-new {
+.QueryList-new {
   padding: 10px;
   font-size: 20px;
   border-bottom: 1px solid #CCC;
 
-  i {
-    cursor: pointer;
-  }
 }
 
-.DataSourceList > ul {
+.QueryList-new i {
+  cursor: pointer;
+}
+
+.QueryList > ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -22,7 +23,7 @@
   overflow-y: auto;
 }
 
-.DataSourceList > ul > li {
+.QueryList > ul > li {
   margin: 0;
   padding: 15px 10px;
   border-bottom: 1px solid #CCC;
@@ -35,7 +36,7 @@
   cursor: pointer;
 }
 
-.DataSourceList > ul > li.is-selected {
+.QueryList > ul > li.is-selected {
   background-color: #2673E8;
   color: #FFF;
 }
