--- a/app/renderer/styles/components/query_panel.css
+++ b/app/renderer/styles/components/query_panel.css
@@ -14,11 +14,11 @@
   flex-direction: column;
   height: 100vh;
   width: 0;
+}
 
-  .QueryResult {
-    flex: 1 1 auto;
-    overflow: auto;
-  }
+.QueryPanel-main .QueryResult {
+  flex: 1 1 auto;
+  overflow: auto;
 }
 
 .QueryPanel-main .QueryPanelHeader {
