--- a/app/renderer/styles/components/table_summary.css
+++ b/app/renderer/styles/components/table_summary.css
@@ -5,7 +5,7 @@
 }
 
 .TableSummary table th,
-.TableSummary table td, {
+.TableSummary table td {
   text-align: left;
   border-bottom: 1px solid #CCC;
   padding: 10px 5px;
