--- a/app/renderer/pages/App/App.css
+++ b/app/renderer/pages/App/App.css
@@ -1,15 +1,15 @@
-.layout-app {
+.page-app {
   display: flex;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 }
 
-.layout-app-menu {
+.page-app-menu {
   width: 48px;
 }
 
-.layout-app-main {
+.page-app-main {
   flex: 1;
   width: 0;
 }
