--- a/app/renderer/styles/components/button.css
+++ b/app/renderer/styles/components/button.css
@@ -11,7 +11,7 @@
   touch-action: manipulation;
   cursor: pointer;
   user-select: none;
-  background-image: none;
+  background-image: linear-gradient(transparent, rgba(0,0,0,.05) 40%, rgba(0,0,0,.1));
   border: 1px solid transparent;
   border-radius: 4px;
   color: #333;
