--- a/app/renderer/pages/Query/Query.css
+++ b/app/renderer/pages/Query/Query.css
@@ -1,5 +1,6 @@
 .page-Query {
   display: flex;
+  --page-Query-headerHeight: 48px;
 }
 
 .page-Query-list {
@@ -23,14 +24,14 @@
 
 .page-Query-main .QueryHeader {
   z-index: 1;
+  height: var(--page-Query-headerHeight);
 }
 
-.page-Query-main .SQLEditor {
+.page-Query-main .QueryEditor {
   z-index: 0;
-  height: 45vh;
-  max-height: calc(100vh - 48px);
 }
 
-.page-Query-main .SQLEditor .Editor {
-  height: calc(100% - 2px);
+.QueryEditor .Editor {
+  height: 40vh;
+  max-height: calc(100vh - var(--page-Query-headerHeight) - var(--QueryEditor-navbarHeight) - 2px); /* 2px == border width */
 }
