--- a/src/renderer/pages/Query/Query.css
+++ b/src/renderer/pages/Query/Query.css
@@ -34,7 +34,6 @@
 .QueryEditor .Editor {
   height: 40vh;
   max-height: calc(
-    100vh - var(--page-Query-headerHeight) - var(--QueryEditor-navbarHeight) -
-      2px
+    100vh - var(--page-Query-headerHeight) - var(--QueryEditor-navbarHeight) - 2px
   ); /* 2px == border width */
 }
