--- a/src/renderer/components/ModalDialog/ModalDialog.css
+++ b/src/renderer/components/ModalDialog/ModalDialog.css
@@ -8,7 +8,6 @@
   background-color: #efefef;
   border: 1px solid #ccc;
   border-top: none;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2),
-    0 6px 10px -6px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2), 0 6px 10px -6px rgba(0, 0, 0, 0.2) inset;
   outline: none;
 }
