Change editor's font

--- a/src/renderer/components/Editor/Editor.css
+++ b/src/renderer/components/Editor/Editor.css
@@ -2,6 +2,8 @@
 }
 
 .Editor .CodeMirror {
-  font-size: 13px;
+  font-family: "RictyDiminished";
+  font-size: 16px;
+  line-height: 1.2;
   font-family: monaco, monospace;
 }
