Update React to 16.8 and React-Select to 3

--- a/src/renderer/components/QueryHeader/QueryHeader.css
+++ b/src/renderer/components/QueryHeader/QueryHeader.css
@@ -15,7 +15,7 @@
 }
 
 .QueryHeader-selectDataSource {
-  position: absolute;
+  position: absolute !important;
   right: 10px;
   top: 6px;
   width: 240px;
