--- a/src/renderer/components/QueryEditor/QueryEditor.css
+++ b/src/renderer/components/QueryEditor/QueryEditor.css
@@ -1,7 +1,17 @@
 .QueryEditor {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   --QueryEditor-navbarHeight: 45px;
+}
+
+.QueryEditor .Editor {
+  height: 100%;
+  max-height: calc(
+    100vh - var(--page-Query-headerHeight) - var(--QueryEditor-navbarHeight) - 2px
+  ); /* 2px == border width */
 }
 
 .QueryEditor .Editor .CodeMirror {
@@ -9,6 +19,7 @@
 }
 
 .QueryEditor-navbar {
+  flex-basis: var(--QueryEditor-navbarHeight);
   box-sizing: border-box;
   padding: 10px;
   background-color: #f7f7f7;
