Use <i> instead of pseudo element
The font name was changed in FontAwesome 5, so it could not be displayed.

--- a/src/renderer/components/TableList/TableList.css
+++ b/src/renderer/components/TableList/TableList.css
@@ -10,10 +10,7 @@
   position: relative;
 }
 
-.TableList-filter:before {
-  content: "\f002";
-  font-family: "FontAwesome";
-  display: inline-block;
+.TableList-filter > i {
   position: absolute;
   left: 14px;
   top: 16px;
