--- a/src/renderer/components/QueryResultChart/QueryResultChart.css
+++ b/src/renderer/components/QueryResultChart/QueryResultChart.css
@@ -29,6 +29,11 @@
   width: 14px;
 }
 
+.QueryResultChart-selectType img.scatter {
+  width: 14px;
+  margin-right: 5px;
+}
+
 .QueryResultChart .has-value.Select--single > .Select-control .Select-value .Select-value-label,
 .QueryResultChart .has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
   color: #666;
