--- a/src/renderer/components/QueryEditor/QueryEditor.css
+++ b/src/renderer/components/QueryEditor/QueryEditor.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  box-sizing: border-box;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   --QueryEditor-navbarHeight: 45px;
