--- a/src/renderer/components/TableList/TableList.css
+++ b/src/renderer/components/TableList/TableList.css
@@ -7,7 +7,9 @@
 
 .TableList-filter {
   padding: 10px 5px;
-  position: relative;
+  position: sticky;
+  top: 0;
+  background-color: inherit;
 }
 
 .TableList-filter > i {
