Show loading while fetching table

--- a/src/renderer/components/TableList/TableList.css
+++ b/src/renderer/components/TableList/TableList.css
@@ -68,3 +68,8 @@
 .TableList > ul > li.is-view > i {
   color: #4b89bb;
 }
+
+.TableList .TableList-loading {
+  padding-top: 20px;
+  text-align: center;
+}
