Frameless window in macOS
https://www.electronjs.org/docs/api/frameless-window#alternatives-on-macos

--- a/src/renderer/pages/App/App.css
+++ b/src/renderer/pages/App/App.css
@@ -9,6 +9,11 @@
   width: 48px;
 }
 
+.page-app-darwin-menu {
+  width: 70px;
+  -webkit-app-region: drag;
+}
+
 .page-app-main {
   flex: 1;
   width: 0;
