Add draggable area in macOS

--- a/src/renderer/components/DataSourceList/DataSourceList.css
+++ b/src/renderer/components/DataSourceList/DataSourceList.css
@@ -10,6 +10,10 @@
   border-bottom: 1px solid #ccc;
 }
 
+.DataSourceList-new.darwin {
+  -webkit-app-region: drag;
+}
+
 .DataSourceList-new i {
   cursor: pointer;
 }
