Add setting ui to manage maximum number of rows of tsv in sharing gist

--- a/src/renderer/pages/Setting/Setting.css
+++ b/src/renderer/pages/Setting/Setting.css
@@ -29,7 +29,8 @@
   width: 150px;
 }
 
-.page-Setting input[type="text"] {
+.page-Setting input[type="text"],
+.page-Setting input[type="number"] {
   width: 300px;
   padding: 5px;
   outline: none;
