--- a/src/renderer/components/QueryResultNav/QueryResultNav.css
+++ b/src/renderer/components/QueryResultNav/QueryResultNav.css
@@ -5,6 +5,7 @@
   border-bottom: 1px solid #ccc;
   position: sticky;
   top: 0;
+  left: 0;
   background-color: white;
   z-index: 1;
   height: 45px;
