--- a/src/renderer/components/QueryList/QueryList.css
+++ b/src/renderer/components/QueryList/QueryList.css
@@ -28,7 +28,9 @@
 
 .QueryList > ul > li {
   margin: 0;
-  padding: 15px 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
   border-bottom: 1px solid #ccc;
   color: #333;
   box-sizing: border-box;
@@ -40,10 +42,37 @@
 }
 
 .QueryList > ul > li.is-selected {
-  background-color: #2673e8;
-  color: #fff;
+  background-image: linear-gradient(to right, #2673e8 5px, #EDF5FE 5px);
+  background-repeat: no-repeat;
 }
 
 .QueryList-list {
   user-select: none;
+}
+
+.QueryList-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.QueryList-item-title {
+  font-weight: bold;
+  white-space: normal;
+  overflow-wrap: break-word;
+  color: #333;
+}
+
+.QueryList-item-subtitle {
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #666;
+}
+
+.QueryList-item-time {
+  font-size: 12px;
+  color: #666;
+  align-self: flex-end;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
