--- a/src/renderer/components/QueryResultTable/QueryResultTable.css
+++ b/src/renderer/components/QueryResultTable/QueryResultTable.css
@@ -36,6 +36,10 @@
   vertical-align: top;
 }
 
+.QueryResultTable-table tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
 .QueryResultTable-null {
   color: #999;
 }
